fix UI on ios

--- a/app.css
+++ b/app.css
@@ -9,6 +9,14 @@ body {
     padding-top: 20%;
 }
 
+.input-line {
+    display: flex;
+    justify-content: center;
+}
+.input-line div {
+    margin: 0 5px;
+}
+
 input {
     width: 30px;
 }
